--- a/adventure.html
+++ b/adventure.html
@@ -559,7 +559,7 @@ Brian is my son. He passed away peacefully in his sleep, for no apparent reason.
 Shortly after Brian died I found a much simpler way to prove my thesis. The experimental results were clear. I decided to stick with those results. I knew that the Lord had helped me.
 
 </p><p>
-I learned something from those results which amazed me. I my thesis I argued that if a probability that a sequence belongs to a language is desired, then it is important to avoid assuming a degree of generalization. I proposed two methods for avoiding such an assumption: MINS and Segment Selection. MINS was very simple and fast. Segment Selection was sophisticated and slower. I assumed that Segment Selection would be more effective, but it wasn't. MINS was better! I figured that this fact was significant and planned to base my doctoral research on it.
+I learned something from those results which amazed me. In my thesis I argued that if a probability that a sequence belongs to a language is desired, then it is important to avoid assuming a degree of generalization. I proposed two methods for avoiding such an assumption: MINS and Segment Selection. MINS was very simple and fast. Segment Selection was sophisticated and slower. I assumed that Segment Selection would be more effective, but it wasn't. MINS was better! I figured that this fact was significant and planned to base my doctoral research on it.
 
 </p><p>
 The kickoff meeting was the start of a research project funded by the US Air Force to learn more about using UAVs (Unmanned Aerial or Air Vehicles) to intelligently and cooperatively track ground targets in an urban environment. BYU had been selected to help with this research project because of the MAGICC lab led by Randy Beard from the electrical engineering department and Tim McLain from the mechanical engineering department. Dr. Seppi (from the computer science department) got involved, and then he invited me to share my ideas about how research in language modeling could be applied to this urban target tracking problem. The urban environment meant that there would be tall buildings which would sometimes prevent UAVs from viewing the ground target. A similar situation occurs in language modeling when an unknown word is part of a sentence. An unknown word is similar to a period of time in which the ground target is not observed by UAVs overhead.
@@ -573,6 +573,11 @@ The UAV research project was in Phase 1, with funding for six months. All partie
 </p><p>
 On November 7 my advisor decided to postpone plans for my thesis defense. He thought I had overlooked a critically relevant field of study. I told him that I would look into it. I did, and argued that the field was not as relevant as it appeared.
 
+</p><p>
+I also spent time preparing for my doctoral research by investigating the usefulness of MINS in the study of DNA. I noticed that a certain paper published in 1992 by David M. Hillis and others had become influential by creating in a lab a known phylogeny of viruses. The researchers took a virus and then mutated it to create two slightly different versions of the original virus, and then repeated that same process for a few generations. The researchers then applied models for predicting evolutionary relationships given data about the DNA of the viruses in the known evolutionary tree. 
+
+</p><p>
+The models used to predict evolutionary relationships ignored certain information which I knew that MINS did not ignore. I wondered if MINS could do a better job of predicting than the other methods. I found that MINS was useful for some things and learned more about how to use it.
 
 </p>
 
