--- a/adventure.html
+++ b/adventure.html
@@ -579,10 +579,26 @@ I also spent time preparing for my doctoral research by investigating the useful
 </p><p>
 The models used to predict evolutionary relationships ignored certain information which I knew that MINS did not ignore. I wondered if MINS could do a better job of predicting than the other methods. I found that MINS was useful for some things and learned more about how to use it.
 
+</p><p>
+Phase 1 had ended which meant that I was no longer getting paid. But, our research group was still quite active preparing a publication on our Phase 1 results and preparing to apply for Phase 2 funding. I suggested ways to use MINS in our Phase 2 proposal.
+
+</p><p>
+On February 5 (2013) I met briefly with my advisor and gave him a paper copy of a complete draft of my thesis.
+
+</p><p>
+I wrote a note to myself about using MINS to infer information about an unknown common evolutionary ancestor of two observed DNA sequences of the same length. Assuming that the two observed sequences evolved through random mutation from a common ancestor it may be possible to infer whether the common ancestor is more closely related to one of the two observed sequences. I performed experiments using data in the 1992 Hillis paper demonstrating effectiveness of the following method, which I describe here as:
 </p>
 
+<blockquote>
 <p>
+Calculate MINS from observed sequence B to observed sequence C, MINS(B&rarr;C). Then do the reverse, calculate MINS from observed sequence C to observed sequence B, MINS(C&rarr;B). If those two MINS values are similar and low, then the common ancestor is probably closely and similarly related to both observed sequences. If the two MINS values are similar and high, then the common ancestor is probably distantly and similarly related to both observed sequences. If MINS(B&rarr;C) is low and MINS(C&rarr;B) is high, then the common ancestor is probably more closely related to sequence C. And, if MINS(B&rarr;C) is high and MINS(C&rarr;B) is low, then the common ancestor is probably more closely related to sequence B. 
 </p>
+</blockquote> 
+
+<p>
+
+</p>
+
 <blockquote>
 <p>
 </p>
