--- a/adventure.html
+++ b/adventure.html
@@ -591,7 +591,7 @@ I wrote a note to myself about using MINS to infer information about an unknown 
 
 <blockquote>
 <p>
-Calculate MINS from observed sequence B to observed sequence C, MINS(B&rarr;C). Then do the reverse, calculate MINS from observed sequence C to observed sequence B, MINS(C&rarr;B). If those two MINS values are similar and low, then the common ancestor is probably closely and similarly related to both observed sequences. If the two MINS values are similar and high, then the common ancestor is probably distantly and similarly related to both observed sequences. If MINS(B&rarr;C) is low and MINS(C&rarr;B) is high, then the common ancestor is probably more closely related to sequence C. And, if MINS(B&rarr;C) is high and MINS(C&rarr;B) is low, then the common ancestor is probably more closely related to sequence B. 
+Calculate MINS from observed sequence B to observed sequence C, <i>mins</i>(B&rarr;C). Then do the reverse, calculate MINS from observed sequence C to observed sequence B, <i>mins</i>(C&rarr;B). If those two MINS values are similar and low, then the common ancestor is probably closely and similarly related to both observed sequences. If the two MINS values are similar and high, then the common ancestor is probably distantly and similarly related to both observed sequences. If <i>mins</i>(B&rarr;C) is low and <i>mins</i>(C&rarr;B) is high, then the common ancestor is probably more closely related to sequence C. And, if <i>mins</i>(B&rarr;C) is high and <i>mins</i>(C&rarr;B) is low, then the common ancestor is probably more closely related to sequence B. 
 </p>
 </blockquote> 
 
