--- a/adventure.html
+++ b/adventure.html
@@ -586,7 +586,7 @@ Phase 1 had ended which meant that I was no longer getting paid. But, our resear
 On February 5 (2013) I met briefly with my advisor and gave him a paper copy of a complete draft of my thesis.
 
 </p><p>
-I wrote a note to myself about using MINS to infer information about an unknown common evolutionary ancestor of two observed DNA sequences of the same length. Assuming that the two observed sequences evolved through random mutation from a common ancestor it may be possible to infer whether the common ancestor is more closely related to one of the two observed sequences. I performed experiments using data in the 1992 Hillis paper demonstrating effectiveness of the following method, which I describe here as:
+A few days later, I wrote a note to myself about using MINS to infer information about an unknown common evolutionary ancestor of two observed DNA sequences of the same length. Assuming that the two observed sequences evolved through random mutation from a common ancestor it may be possible to infer whether the common ancestor is more closely related to one of the two observed sequences. I had performed experiments using data in the 1992 Hillis paper demonstrating effectiveness of the following method, which I describe here as:
 </p>
 
 <blockquote>
