--- a/adventure.html
+++ b/adventure.html
@@ -596,6 +596,12 @@ Calculate MINS from observed sequence B to observed sequence C, <i>mins</i>(B&ra
 </blockquote> 
 
 <p>
+I now felt prepared to meet again with Dr. Seppi and Dr. Clement about my biology-related PhD research plans. 
+
+
+
+
+<p>
 
 </p>
 
