Inspired to take action

--- a/adventure.html
+++ b/adventure.html
@@ -598,10 +598,14 @@ Calculate MINS from observed sequence B to observed sequence C, <i>mins</i>(B&ra
 <p>
 I now felt prepared to meet again with Dr. Seppi and Dr. Clement about my biology-related PhD research plans. 
 
+</p><p>
+Today Friday Feb 15 is the deadline for me to schedule my defense and graduate at the end of this semester. We met today and he gave me some feedback, but too late for me to respond. I felt that he was not fully engaged in helping me to finish in a timely manner. 
 
+</p><p>
+The next day, I made some edits, responding to his feedback.
 
-
-<p>
+</p><p>
+On Sunday, I felt strongly impressed to take corrective action, rather than continue on my current course. In the following days I did so, receiving specific instruction from the Spirit to guide me.
 
 </p>
 
