--- a/adventure.html
+++ b/adventure.html
@@ -610,6 +610,13 @@ The next day, I made some edits, responding to his feedback.
 </p><p>
 On Sunday, I felt strongly impressed to take corrective action, rather than continue on my current course. In the following days I did so, receiving specific instruction from the Spirit to guide me.
 
+</p><p>
+On March 20, Dr. Seppi became my advisor. Nine days later my thesis defense was scheduled, and on April 15 it was successfully defended. On the day of my defense, our UAV paper was accepted for publication. One week later, our application for Phase 2 UAV research funding was approved.
+
+</p><p>
+
+
+
 </p>
 
 <blockquote>
@@ -619,7 +626,7 @@ On Sunday, I felt strongly impressed to take corrective action, rather than cont
 
 <p>
 </p><p>
-<small>Last revised 21 June 2023</small>
+<small>Last revised 22 June 2023</small>
 
 </p><p>
 <small>Copyright &copy; 2023 Kevin Cook</small>
