--- a/adventure.html
+++ b/adventure.html
@@ -614,8 +614,16 @@ On Sunday, I felt strongly impressed to take corrective action, rather than cont
 On March 20, Dr. Seppi became my advisor. Nine days later my thesis defense was scheduled, and on April 15 it was successfully defended. On the day of my defense, our UAV paper was accepted for publication. One week later, our application for Phase 2 UAV research funding was approved.
 
 </p><p>
+The first order of business was to put together a plan for a set of papers I would write, which papers would collectively serve as my dissertation. Originally, I wanted to show how MINS could be applied in various fields of study, including biology, but that plan was not approved. Ultimately, it was determined that my dissertation would focus on UAVs, of which applying MINS would be a part. 
 
+</p><p>
+I dove right in to the task of writing a journal version of our UAV paper. I did that pretty much on my own, and it was accepted!
 
+</p><p>
+I also started work on a paper to introduce MINS as relative measure of entropy to the machine learning community. I was really hoping to succeed with that paper, but after two tries I ran out of time. One reviewer complained that MINS was too simple to be considered for the important publication to which I had submitted it.
+
+</p><p>
+On September 3, 2014, in an NLP lab meeting, one of my fellow students said something that struck me. He said that the probability that a continuous random variable takes on a particular value is zero. In his mind this was simply an established fact, though a little difficult to fully understand. In my mind it was a contradiction. By definition, zero probability means that the event cannot happen. Immediately, I began to try to persuade my lab mates that someone had made a mistake. But that was a seemingly impossible task. An entire academic community accepted this apparent contradiction. And my friends were at school to get a PhD, not to try to prove others wrong who already had one.
 
 </p>
 
@@ -626,7 +634,7 @@ On March 20, Dr. Seppi became my advisor. Nine days later my thesis defense was 
 
 <p>
 </p><p>
-<small>Last revised 22 June 2023</small>
+<small>Last revised 24 June 2023</small>
 
 </p><p>
 <small>Copyright &copy; 2023 Kevin Cook</small>
