--- a/adventure.html
+++ b/adventure.html
@@ -625,6 +625,37 @@ I also started work on a paper to introduce MINS as relative measure of entropy 
 </p><p>
 On September 3, 2013, in an NLP lab meeting, one of my fellow students said something that struck me. He said that the probability that a continuous random variable takes on a particular value is zero. In his mind this was simply an established fact, though a little difficult to fully understand. In my mind it was a contradiction. By definition, zero probability means that the event cannot happen. Immediately, I began to try to persuade my lab mates that someone had made a mistake. But that was a seemingly impossible task. An entire academic community accepted this apparent contradiction. And my friends were at school to get a PhD, not to try to prove others wrong who already had one.
 
+</p><p>
+I was immediately interested in discovering the root cause of the problem. Perhaps it was boyish curiosity. I started searching. After a month and a half I was led to axiomatic set theory, and to the definition of the word "all". 
+
+</p><p>
+Meanwhile, there was plenty of work to be done participating in meetings, writing code, and running experiments for the Phase 2 UAV research project of which I was a part. One of the things we wanted to do was to integrate target tracking technology from the MAGICC lab called R-RANSAC with a probabilistic model for discrete sequence data used in our UAV paper called the Sequence Memoizer.
+
+</p><p>
+On March 21, 2014, I discovered the writings of Ludvig Wittgenstein from the Set Theory article in Wikipedia. I checked out a book written by him from the library and studied it. He complained about what was called the axiom of infinity, in axiomatic set theory. He also talked about difficulty in pinning down the meaning of the word "all". He pointed out that so-called completed infinite mathematical extensions are a contradiction-in-terms.
+
+</p><p>
+In December I caused our UAV research team to withdraw a submitted paper to avoid what I perceived as unfair competition, which was painful.
+
+</p><p>
+Also in December, I decided to eventually publish an extra-curricular paper in a field called philosophy of mathematics. My name for the paper while working on it was simply my def paper (definition paper), because I felt that clear definitions were needed. 
+
+</p><p>
+By February 10, 2015, I started thinking about what it meant to define a universe of discourse in ZFC, prevailing axiomatic set theory. 
+
+</p><p>
+On February 14, I had the idea that ZFC is inconsistent regardless of interpretation, and while serving in the temple later that day had an idea for writing a proof.
+
+</p><p>
+About a week later I started writing my def paper. While doing so I remembered something that Steven R. Covey taught, that leadership is a choice.
+
+</p><p>
+I decided that I would not seek employment related to UAVs, but rather some sort of employment related to my def paper. I wanted to finish my PhD as soon as possible.
+
+
+
+
+
 </p>
 
 <blockquote>
