Axiom of pairing

--- a/adventure.html
+++ b/adventure.html
@@ -644,10 +644,10 @@ Also in December, I decided to eventually publish an extra-curricular paper in a
 By February 10, 2015, I started thinking about what it meant to define a universe of discourse in ZFC, prevailing axiomatic set theory. 
 
 </p><p>
-On February 14, I had the idea that ZFC is inconsistent regardless of interpretation, and while serving in the temple later that day had an idea for writing a proof.
+On February 14, I had the idea that ZFC is inconsistent regardless of interpretation, and while serving in the temple later that day had an idea for writing a proof. The next week while struggling to write the proof I realized that the axiom of pairing was inconsistent; it was the problem. The axiom of infinity relied upon the universe of discourse which supposedly had been defined as infinite because of the axiom of pairing. But definition of the universe of discourse was never specified to have been completed. That definition wasn't finished, and therefore was not defined! 
 
 </p><p>
-About a week later I started writing my def paper. While doing so I remembered something that Steven R. Covey taught, that leadership is a choice.
+I remembered something that Steven R. Covey taught, that leadership is a choice.
 
 </p><p>
 I decided that I would not seek employment related to UAVs, but rather some sort of employment related to my def paper. I wanted to finish my PhD as soon as possible.
