Submit the paper

--- a/adventure.html
+++ b/adventure.html
@@ -647,12 +647,10 @@ By February 10, 2015, I started thinking about what it meant to define a univers
 On February 14, I had the idea that ZFC is inconsistent regardless of interpretation, and while serving in the temple later that day had an idea for writing a proof. The next week while struggling to write the proof I realized that the axiom of pairing was inconsistent; it was the problem. The axiom of infinity relied upon the universe of discourse which supposedly had been defined as infinite because of the axiom of pairing. But definition of the universe of discourse was never specified to have been completed. That definition wasn't finished, and therefore was not defined! 
 
 </p><p>
-I remembered something that Steven R. Covey taught, that leadership is a choice.
+I remembered something that Steven R. Covey taught, that leadership is a choice. I decided that I would not seek employment related to UAVs, but rather some sort of employment related to my def paper. I wanted to finish my PhD as soon as possible.
 
 </p><p>
-I decided that I would not seek employment related to UAVs, but rather some sort of employment related to my def paper. I wanted to finish my PhD as soon as possible.
-
-
+On Saturday February 28 I submitted my paper to Robert Thomas at Philosophia Mathematica. He responded immediately that I had sent it to the wrong journal, and suggested that I send it to the Journal of Symbolic Logic instead, which I did on Monday. The paper was not long, and did not take long to write, just three pages.
 
 
 
