--- a/adventure.html
+++ b/adventure.html
@@ -641,10 +641,10 @@ In December I caused our UAV research team to withdraw a submitted paper to avoi
 Also in December, I decided to eventually publish an extra-curricular paper in a field called philosophy of mathematics. My name for the paper while working on it was simply my def paper (definition paper), because I felt that clear definitions were needed. 
 
 </p><p>
-By February 10, 2015, I started thinking about what it meant to define a universe of discourse in ZFC, prevailing axiomatic set theory. 
+By February 10, 2015, I started thinking about what it meant to define a domain of discourse in ZFC, prevailing axiomatic set theory. 
 
 </p><p>
-On February 14, I had the idea that ZFC is inconsistent regardless of interpretation, and while serving in the temple later that day had an idea for writing a proof. The next week while struggling to write the proof I realized that the axiom of pairing was inconsistent; it was the problem. The axiom of infinity relied upon the universe of discourse which supposedly had been defined as infinite because of the axiom of pairing. But definition of the universe of discourse was never specified to have been completed. That definition wasn't finished, and therefore was not defined! 
+On February 14, I had the idea that ZFC is inconsistent regardless of interpretation, and while serving in the temple later that day had an idea for writing a proof. The next week while struggling to write the proof I realized that the axiom of pairing was inconsistent; it was the problem. The axiom of infinity relied upon the domain of discourse which supposedly had been defined as infinite because of the axiom of pairing. But definition of the domain of discourse was never specified to have been completed. That definition wasn't finished, and therefore was not defined! 
 
 </p><p>
 I remembered something that Steven R. Covey taught, that leadership is a choice. I decided that I would not seek employment related to UAVs, but rather some sort of employment related to my def paper. I wanted to finish my PhD as soon as possible.
@@ -652,10 +652,21 @@ I remembered something that Steven R. Covey taught, that leadership is a choice.
 </p><p>
 On Saturday February 28 I submitted my paper to Robert Thomas at Philosophia Mathematica. He responded immediately that I had sent it to the wrong journal, and suggested that I send it to the Journal of Symbolic Logic instead, which I did on Monday. The paper was not long, and did not take long to write, just three pages.
 
+</p><p>
+The editor, Philip Welch, also responded immediately, and wrote: 
+</p>
+<blockquote>
+<p>
+"ZF is an impredicative theory and hence allows for (indeed requires) an infinite domain of discourse to which your arguments do not apply."
+</p>
+</blockquote> 
+
+<p>
+ZFC was used as the definition of an infinite domain of discourse. I don't think he thought very deeply about my paper. I believed that no amount of explaining or revising would ever convince him to consider it seriously. 
+
 
 
 </p>
-
 <blockquote>
 <p>
 </p>
