--- a/adventure.html
+++ b/adventure.html
@@ -664,7 +664,30 @@ The editor, Philip Welch, also responded immediately, and wrote:
 <p>
 ZFC was used as the definition of an infinite domain of discourse. I don't think he thought very deeply about my paper. I believed that no amount of explaining or revising would ever convince him to consider it seriously. 
 
+</p><p>
+On Wednesday I put the paper on my home page, on our lab's computer, and on Thursday I invited some math professors at Harvard to look at it. Hugh Woodin was kind enough to do so and sent the following reply:
+</p>
+<blockquote>
+<p>
+"Your argument seems to assume that the domain (of discourse) is finite."
+</p>
+</blockquote> 
 
+</p><p>
+Within an hour I wrote back:
+</p>
+<blockquote>
+<p>
+"It does seem that way, but the argument is for any given domain of discourse."
+</p>
+</blockquote> 
+
+</p><p>
+He didn't respond further.
+
+
+
+</p><p>
 
 </p>
 <blockquote>
