The term finite

--- a/adventure.html
+++ b/adventure.html
@@ -665,7 +665,7 @@ The editor, Philip Welch, also responded immediately, and wrote:
 ZFC was used as the definition of an infinite domain of discourse. I don't think he thought very deeply about my paper. I believed that no amount of explaining or revising would ever convince him to consider it seriously. 
 
 </p><p>
-On Wednesday I put the paper on my home page, on our lab's computer, and on Thursday I invited some math professors at Harvard to look at it. Hugh Woodin was kind enough to do so and sent the following reply:
+On Wednesday I put the paper on my home page, on our lab's computer, and on Thursday I invited four leading math professors to look at it. Hugh Woodin at Harvard was kind enough to do so and sent the following reply:
 </p>
 <blockquote>
 <p>
@@ -683,9 +683,38 @@ Within an hour I wrote back:
 </blockquote> 
 
 </p><p>
-He didn't respond further.
+He didn't respond further. I really appreciated his willingness to read and talk with me about my paper. I learned a lot from our brief exchange. A week later I had another longer exchange with another Harvard professor which helped me to understand why my paper was difficult to understand. It was because people did not realize that they were using the term "finite" to mean "defined" or "given". As soon as I realized this I wrote back to Hugh Woodin and explained:
+</p>
+<blockquote>
+<p>
+"I feel that I can give a more direct response to your comment that my argument seems to assume that the domain of discourse is finite. 
 
+My argument assumes that the domain of discourse is given or defined. Perhaps the word finite means given or defined."
+</p>
+</blockquote> 
 
+<p>
+I was a bit sharp, writing that perhaps the word finite means given or defined. Because, of course, if that is the case then the word infinite means not given or not defined. I did not mean to be unkind or rude, just clear.
+
+</p><p>
+I also wrote back to Philip Welch explaining the same point:
+</p>
+<blockquote>
+<p>
+"Please permit me a brief response. My arguments apply to a given or defined domain of discourse. Perhaps that is what is meant generally by the term finite. Thank you."
+</p>
+</blockquote> 
+
+<p>
+And to the other Harvard professor I wrote:
+</p>
+<blockquote>
+<p>
+"When you said ZFC has no finite model, I should have responded that ZFC has no given or defined model, which is why it is inconsistent."
+</p>
+</blockquote> 
+
+<p>
 
 </p><p>
 
