--- a/adventure.html
+++ b/adventure.html
@@ -641,7 +641,7 @@ In December I caused our UAV research team to withdraw a submitted paper to avoi
 Also in December, I decided to eventually publish an extra-curricular paper in a field called philosophy of mathematics. My name for the paper while working on it was simply my def paper (definition paper), because I felt that clear definitions were needed. 
 
 </p><p>
-By February 10, 2015, I started thinking about what it meant to define a domain of discourse in ZFC, prevailing axiomatic set theory. 
+By February 10, 2015, I was thinking about what it meant to define a domain of discourse in ZFC, prevailing axiomatic set theory. 
 
 </p><p>
 On February 14, I had the idea that ZFC is inconsistent regardless of interpretation, and while serving in the temple later that day had an idea for writing a proof. The next week while struggling to write the proof I realized that the axiom of pairing was inconsistent; it was the problem. The axiom of infinity relied upon the domain of discourse which supposedly had been defined as infinite because of the axiom of pairing. But definition of the domain of discourse was never specified to have been completed. That definition wasn't finished, and therefore was not defined! 
@@ -715,6 +715,8 @@ And to the other Harvard professor I wrote:
 </blockquote> 
 
 <p>
+After Harvard, I wrote to other full professors at Berkeley, UCLA, Princeton, and Oxford. I greatly appreciated those who were willing to read my paper, and to tell me what they thought about it. Academics have been doing this sort of thing for a long time, writing down their ideas and asking others to read what they have written. I put myself in a position to be corrected by those who should be best able to teach me. I listened carefully to all those who were kind enough to take the time to communicate with me.
+
 
 </p><p>
 
