--- a/adventure.html
+++ b/adventure.html
@@ -717,6 +717,13 @@ And to the other Harvard professor I wrote:
 <p>
 After Harvard, I wrote to other full professors at Berkeley, UCLA, Princeton, and Oxford. I greatly appreciated those who were willing to read my paper, and to tell me what they thought about it. Academics have been doing this sort of thing for a long time, writing down their ideas and asking others to read what they have written. I put myself in a position to be corrected by those who should be best able to teach me. I listened carefully to all those who were kind enough to take the time to communicate with me.
 
+</p><p>
+On April 15 I received the email I wrote about at the beginning of this story from someone I had not contacted, Michael Beeson. I did not perceive his communication as kind, rather I positively felt threatened. About two weeks later I was writing Jeremy Kahn from CUNY about my paper and he asked me if I had talked with any of the professors in my department about it. I hadn't, but I didn't want to tell him that. I knew that my professors wouldn't want to have anything to do with it. I felt like a lamb having a casual chat with a wolf in a dark corner of the woods. For some reason, I decided to be trusting and answered honestly that I had not. Three days later my advisor told me that he spoke for himself and the department by demanding that I stop contacting people about my paper. 
+
+</p><p>
+My paper was no longer merely academic. It became political.
+
+
 
 </p><p>
 
