--- a/adventure.html
+++ b/adventure.html
@@ -723,7 +723,8 @@ On April 15 I received the email I wrote about at the beginning of this story fr
 </p><p>
 My paper was no longer merely academic. It became political.
 
-
+</p><p>
+I didn't know why, but after my advisor had delivered his message, I received clear instruction from the Spirit to refuse to comply with any demands. The next day, a Saturday, I sent an email refusing to comply. That was difficult for me to do. I guess I was getting used to difficult things. It was very difficult for me to follow instruction from the Spirit which led to Dr. Seppi becoming my advisor two years earlier. It is difficult for me to write this story. 
 
 </p><p>
 
