--- a/adventure.html
+++ b/adventure.html
@@ -727,6 +727,7 @@ My paper was no longer merely academic. It became political.
 I didn't know why, but after my advisor had delivered his message, I received clear instruction from the Spirit to refuse to comply with any demands. The next day, a Saturday, I sent an email refusing to comply. That was difficult for me to do. I guess I was getting used to difficult things. It was very difficult for me to follow instruction from the Spirit which led to Dr. Seppi becoming my advisor two years earlier. It is difficult for me to write this story. 
 
 </p><p>
+I continued faithful following that instruction until new instruction came, which came the day after my computer access was disabled. This new instruction was to stop sending emails as I had been doing, and very importantly NOT to agree that I would stop sending them. It so happened that not agreeing to stop contacting people about my paper would also be very difficult! It was not difficult to stop sending the emails. 
 
 </p>
 <blockquote>
