--- a/adventure.html
+++ b/adventure.html
@@ -729,6 +729,25 @@ I didn't know why, but after my advisor had delivered his message, I received cl
 </p><p>
 I continued faithful following that instruction until new instruction came, which came the day after my computer access was disabled. This new instruction was to stop sending emails as I had been doing, and very importantly NOT to agree that I would stop sending them. It so happened that not agreeing to stop contacting people about my paper would also be very difficult! It was not difficult to stop sending the emails. 
 
+</p><p>
+It was hard to have people at BYU upset with me, and thinking critically of me. I didn't like it at all. And it was super distressing thinking that I might be kicked out of the university.
+
+</p><p>
+However, I understood that the pressure came from people outside of BYU. Those people were simply abusing my school.
+
+</p><p>
+I hope that by reading this story you come to understand that there is competition in the academic world between genuine learning and protecting reputation.
+
+</p><p>
+I also hope you believe what I have said about the role that the Spirit of the Lord has had in my adventures in graduate school. I have told the truth.
+
+</p><p>
+I know that God lives and that he is able and willing to help each of us learn, especially when we are willing to hear Him. 
+
+</p><p>
+THE END
+
+
 </p>
 <blockquote>
 <p>
