Add Unspecified and Discussion sections

--- a/point-nine-repeating.html
+++ b/point-nine-repeating.html
@@ -46,10 +46,45 @@ One might define the term to refer to the limit of the variable described above.
 <p>
 Rather than define the term to refer directly to the limit, one might consider defining the term to evaluate to the limit. If the term refers to the variable described above then the term does not evaluate to the limit, because the variable refers to a different number each time a nine is added. If the term refers to the contradiction described above then the term does not evaluate to anything. If the term refers to the class described above then again the term does not evaluate since it is a description not a sequence. In order to pursue this course it would be necessary to specify what the term refers to while ensuring that what the term refers to can evaluate to one. 
 
+<h3>Unspecified</h3>
+<p>
+Another possible meaning of the term 0.999... is a zero followed by a decimal point followed by an unspecified arbitrarily large number of nines. What is an unspecified number? It is something we use in place of a number, a placeholder. It isn't a number, but we might treat it as if it were in order to accomplish some purpose. Such a placeholder can be useful when the exact number of nines is not important, as long as the number is sufficiently large. In this sense, one minus 0.999... could represent an unspecified arbitrarily small non-zero value. 
+
+<h3>Discussion</h3>
+<p>
+In this article I attempt to make various interpretations of the term 0.999... clear, using common English. I argue that using this term to refer directly to the limit is not a good idea unless some other term is used to refer to the variable described above. Without such a second term, people will resort to using 0.999... to refer both to the limit and to the variable, which is certain to confuse.
 
 <p>
-<small>Last revised 30 July 2020</small>
+Some people are confused, especially young people who are told that if you keep adding nines without ever stopping, or somehow magically add an infinite number of nines all at once, you get one. The inquisitive and confident child is likely to reject such teaching. (The statement "add an infinite number of nines all at once" is self-contradictory.)
+
 <p>
-<small>Copyright &copy; 2020 Kevin Cook</small>
+My concern is for those whose confidence in their own ability to reason is damaged because someone in authority essentially tells them that they can't do it, that they are incapable of reasoning independently. Such a blow to one's self-confidence is dismaying. Such a blow to a child seeking to learn from a adult teacher is potentially tragic. 
+
+<p>
+Of course, reason isn't the most important of our human capacities, but it is important! Let us nurture young people's innate desire to think, to figure things out. Let us help them, not hurt them. We as adults should be the ones to critically assess our own academic history, and do the necessary housecleaning.
+
+<p>
+Speaking of housecleaning, my ZFC paper is such an effort. But I want to do more than point out that someone else's work in not logically consistent. I want to offer something which is consistent, and which meets the need.
+
+<p>
+I believe that we need to be able to communicate more clearly with one another. Such improvement requires willingness to choose words and phrases which others more readily understand. I have attempted to do that, and I hope that any interested party can understand what I mean, in this context, when I use the terms sequence, variable, contradiction, class, limit, and unspecified.
+
+<p>
+Others may prefer to use different terminology. However, if different terminology is used, it should be as least as expressive as the terminology I have chosen. Using some other terminology, one should at least be able to clearly express each of the abstract concepts I identify in this article.
+
+<p>
+For example, I use the term variable to identify an abstract concept in this article. I can understand that someone may want to use some other term to identify that same concept. Which term would you prefer? In an earlier revision of this article I used the term sequence variable, instead of just variable. I am willing to use different terminology. Frankly, I have found it surprisingly difficult to find a generally accepted term for this particular concept.
+
+<p>
+Of course there is a term, rather than variable or sequence variable, which conveys the idea of something which starts out as 0.9, and then later extends to 0.99, and then to 0.999, and which continues to extend by adding nines over time without ever stopping. Yes, the term 0.999... is very fitting!
+
+<p>
+If using the same term to refer to two distinct concepts actually simplifies conversation, then it might be a good idea. Has the conversation been simplified? If not, then let us step back and add as many distinct terms as is necessary, until it becomes much easier to understand one another.
+
+
+<p>
+<small>Last revised 26 September 2023</small>
+<p>
+<small>Copyright &copy; 2023 Kevin Cook</small>
 </body>
 </html> 
